<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="setting_share1" tools:ignore="MissingTranslation">我正在使用</string>
    <string name="setting_share2" translatable="false">android版，感觉不错，你也来试试吧。地址:</string>
    <string name="setting_share_ways" translatable="false">选择分享方式</string>
    <string name="setting_download_option" translatable="false">是否下载视频</string>
    <string name="select_ques_type_close">关闭</string>
    <string name="select_ques_type">筛选</string>
    <string name="app_name_iyubaclient" translatable="false">爱语吧</string>
    <string name="app_name_microclass" translatable="false">爱语微课</string>
    <string name="pull_to_refresh" translatable="false">下拉刷新</string>
    <string name="login_other_method">其他方式登录</string>
    <string name="already_load_all_comments">已加载全部评论</string>
    <string name="course_list">课程目录</string>
    <string name="course_desc">课程简介</string>
    <string name="course_comment">评论</string>
    <string name="microclass_all_courses">全部课程</string>
    <string name="microclass_fav_courses">我的课程</string>
    <string name="microclass_offline_cache">离线缓存</string>
    <string name="microclass_me">我</string>
    <string name="microclass_setting">设置</string>
    <string name="sec_Verify_fail_Notify">服务器异常，请尝试普通登录</string>
    <string name="contact_detail_customer_services_qq">客服QQ: 445167605</string>
    <string name="contact_detail_technology_qq">技术QQ: 787532674</string>
    <string name="contact_detail_customer_services_qq_number">445167605</string>
    <string name="contact_detail_technology_qq_number">787532674</string>
    <string name="mobile_class">微课</string>
    <string name="micro_class">爱语微课</string>
    <string name="courseslist_downloading">已加入下载队列</string>
    <string name="courseslist_downloaderror">下载错误，请稍后再试！</string>
    <string name="study_all_loaded">已加载全部评论</string>
    <string name="study_no_comment">目前还没有评论</string>
    <string name="study_input_comment">请输入评论内容</string>
    <string name="play_check_network">请检查网络是否可用！</string>
    <string name="proName">SurfingNearby_Android</string>
    <string name="proVer">v2.5.0.0.120116_Android</string>
    <string name="minNameLib">SurfingNearby</string>
    <string name="minVer">2.0</string>
    <string name="pubDate">20120116</string>
    <string name="runEnv_name">Android</string>
    <string name="runEnv_vendor">google</string>
    <string name="runEnv_MIDP">2.0</string>
    <string name="runEnv_CLDC">1.1</string>
    <string name="language">Chinese</string>
    <string name="PRODUCTID">HandBeside_an</string>
    <string name="APK_NAME">SurfingNearby.apk</string>
    <string name="ssite_code">10</string>
    <string name="dialog_title_normal">爱语吧提示</string>
    <string name="error_net_unavailable">网络错误，无法和服务器取得联系\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi_other">网络错误，无法和服务器取得联系\n按\"重设网络\"尝试选择其他Wifi接入点，稍后请重试\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi">网络错误，无法和服务器取得联系\n按\"重设网络\"尝试使用Wifi接入点，稍后请重试\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi_off">网络错误，无法和服务器取得联系\n按\"重设网络\"选择其他Wifi接入点，稍后请重试\n按\"关闭Wifi\"关闭Wifi尝试使用3G/GPRS\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="dialog_button_exit">退出软件</string>
    <string name="dialog_button_resetNet">重设网络</string>
    <string name="dialog_button_offWifi">关闭Wifi</string>
    <string name="about_title" translatable="false">关于</string>
    <string name="about_update_alert_1" translatable="false">当前有新版本更新：</string>
    <string name="about_update_alert_2" translatable="false">,是否要更新？</string>
    <string name="about_update_running_title" translatable="false">更新应用</string>
    <string name="about_update_running" translatable="false">正在更新，请稍后。。。</string>
    <string name="about_error" translatable="false">服务器忙！请稍后下载！</string>
    <string name="about_update_isnew" translatable="false">新概念英语已经是最新版本</string>
    <string name="about_version" translatable="false">软 件 版 本 :</string>
    <string name="about_more" translatable="false">更多爱语吧应用</string>
    <string name="about_praise" translatable="false">给我评价</string>
    <string name="about_offical" translatable="false">爱语吧应用</string>
    <string name="about_weixin" translatable="false">官方微信:iyubar</string>
    <string name="about_announcer" translatable="false">诚招主持人</string>
    <string name="about_announcer_alert" translatable="false">听歌学英语节目主持人正在火爆招聘中，如果您的英语发音标准，声音亲和甜美，下一首听歌学英语主持人也许就是你。\n请将个人简历和作品发送至: hr@iyuba.cn</string>
    <string name="about_update" translatable="false">版本更新</string>
    <string name="about_communicate" translatable="false">如有问题，可与商务热线 4008881905或官方邮箱admin@iyuba.cn联系</string>
    <string name="about_market_error" translatable="false">您当前未安装应用市场，无法使用该功能。</string>
    <string name="about_click_downloadicon" translatable="false">点击左侧的的下载图标下载课程</string>
    <string name="feedback_title" translatable="false">意见反馈</string>
    <string name="feedback_info" translatable="false">您反馈的问题和建议，将是我们进步的动力！</string>
    <string name="feedback_contact" translatable="false">联系方式（有效的邮箱地址）</string>
    <string name="feedback_info_title" translatable="false">反馈或建议</string>
    <string name="feedback_contact_title" translatable="false">联系方式</string>
    <string name="feedback_submit_success" translatable="false">意见反馈已提交！</string>
    <string name="feedback_info_null" translatable="false">反馈信息不能为空！</string>
    <string name="feedback_email_null" translatable="false">请填写email！</string>
    <string name="feedback_effective_email" translatable="false">请填写有效的email！</string>
    <string name="feedback_network_error" translatable="false">网络错误，未能提交反馈！</string>
    <string name="feedback_submitting" translatable="false">提交中，请稍后！</string>
    <string name="no_login">您还未登录！请登录！</string>
    <string name="check_network">网络异常或服务器忙，请稍后重试</string>
    <string name="check_gps">请打开GPS获取位置信息！</string>
    <string name="action_fail">操作失败，请重试！</string>
    <string name="action_no_more" translatable="false">加载完毕，无更多数据！</string>
    <string name="submit" translatable="false">提交</string>
    <string name="edit" translatable="false">编辑</string>
    <string name="send">发送</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="reply">回复</string>
    <string name="pic">图片</string>
    <string name="making">正在紧张制作中…</string>
    <string name="never_update">从未更新过</string>
    <string name="exit">退出登录</string>
    <string name="logout">退出</string>
    <string name="discover_text">发现</string>
    <string name="talk_text" translatable="false">口语秀</string>
    <string name="video" translatable="false">视频</string>
    <string name="pass" translatable="false">闯关</string>
    <string name="me_text">我</string>
    <string name="setting_title" translatable="false">设置</string>
    <string name="buy_title">商店</string>
    <string name="buy_buy">升级VIP</string>
    <string name="buy_remind">语币余额：</string>
    <string name="buy_user">当前用户：</string>
    <string name="buy_state">用户状态：</string>
    <string name="buy_valid">有效期至：</string>
    <string name="buy_function">用户可用功能：</string>
    <string name="buy_function_vips">Vip用户享受以下全部功能</string>
    <string name="buy_tobuy">充值</string>
    <string name="buy_refresh">刷新</string>
    <string name="buy_success_update" translatable="false">支付成功，更新数据中……</string>
    <string name="buy_success">支付成功</string>
    <string name="buy_already">您已经是终身VIP</string>
    <string name="buy_explain1">VIP权限适用全部爱语吧软件</string>
    <string name="buy_explain2">VIP权限仅适用本软件需要: </string>
    <string name="buy_explain3">爱语币</string>
    <string name="collection_title">本地篇目</string>
    <string name="favourite_title">最爱篇目</string>
    <string name="heard_title">历史篇目</string>
    <string name="collection_please_select_art">请选择要删除的文章</string>
    <string name="login_title">用户登录</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_check_user_id_null">用户ID不能为空</string>
    <string name="login_check_effective_user_id">请填写有效的用户ID</string>
    <string name="login_check_user_pwd_null">用户密码不能为空</string>
    <string name="login_check_user_pwd_constraint">密码为6~20个字符</string>
    <string name="login_faild">登录失败！请检查网络是否可用！</string>
    <string name="login_fail">登录失败,请检查用户名和密码</string>
    <string name="login_find_password">忘记密码？</string>
    <string name="login_regist">注册</string>
    <string name="login_login">登录</string>
    <string name="login_unamehint">请输入用户名</string>
    <string name="login_pwdhint">请输入密码</string>
    <string name="login_welcome">欢迎回来 </string>
    <string name="doing_title">评论</string>
    <string name="doing_reply">评论: </string>
    <string name="me_title">我</string>
    <string name="me_state_list" translatable="false">我的签名</string>
    <string name="me_state_text">个性签名</string>
    <string name="me_attention_text">关注</string>
    <string name="me_fans_text">粉丝</string>
    <string name="me_notification_text">通知</string>
    <string name="me_message_text">消息中心</string>
    <string name="me_vip_text">会员中心</string>
    <string name="me_vip_collect" translatable="false">视频收藏</string>
    <string name="me_over_fix">字数超过限制</string>
    <string name="me_music">我的篇目</string>
    <string name="me_state_success">心情修改成功</string>
    <string name="me_state_fail">心情修改失败。请重新发送</string>
    <string name="me_view"> 人看过我的主页</string>
    <string name="me_study_time">学习时长:</string>
    <string name="me_hour">小时</string>
    <string name="me_minute">分钟</string>
    <string name="me_minus">秒</string>
    <string name="me_study_position">全站排名:</string>
    <string name="me_lv">等级:</string>
    <string name="me_score">积分:</string>
    <string name="me_rank">排行榜</string>
    <string name="me_summary">学习报告</string>
    <string name="me_speak_circle">口语圈</string>
    <string name="message_title">私信</string>
    <string name="message_hint">说点什么吧…</string>
    <string name="message_delete">删除成功</string>
    <string name="message_send">发送成功</string>
    <string name="write_message">写私信</string>
    <string name="message_add_all">私信加载完毕</string>
    <string name="message_content_add_all">全部内容加载完毕</string>
    <string name="search_word_title">查词</string>
    <string name="search_word_hint">请输入查询内容</string>
    <string name="word_title">单词</string>
    <string name="search_word_do">搜索</string>
    <string name="word_mean">解释:</string>
    <string name="word_example">例句:</string>
    <string name="word_null">请填写待查单词后再点击查询:</string>
    <string name="no_word_example">尚无例句。正在紧张整理中…</string>
    <string name="social_default_state">这个人很懒，什么也没有留下</string>
    <string name="social_add_all">数据已经加载完毕</string>
    <string name="social_distance">米</string>
    <string name="social_sameapp">共同应用:</string>
    <string name="social_attention">关注</string>
    <string name="social_cancle_attention">取消关注</string>
    <string name="social_success_attention">关注成功</string>
    <string name="social_failed_attention">关注失败</string>
    <string name="social_success_cancle_attention">取消关注成功</string>
    <string name="social_failed_cancle_attention">取消关注失败</string>
    <string name="social_attentioned">您已关注TA啦</string>
    <string name="social_user_not_exist">此用户不存在哦~~</string>
    <string name="social_add_failed">关注失败</string>
    <string name="regist_title">用户注册</string>
    <string name="regist_user_id_hint">3~20位英文、数字或汉字</string>
    <string name="regist_user_pwd_hint">6~20位英文、数字或者下划线</string>
    <string name="regist_user_repwd_hint">确认密码</string>
    <string name="regist_email_hint">输入常用的邮箱，用于找回密码</string>
    <string name="regist_phone_web">网页注册>>></string>
    <string name="regist_phone_toemail">邮箱注册>>></string>
    <string name="gender" translatable="false">性别</string>
    <string name="job" translatable="false">身份</string>
    <string name="location" translatable="false">地区</string>
    <string name="age" translatable="false">年龄</string>
    <string name="advice_tip" translatable="false">为了更好地为您提供智能化学习英语服务，请完善个人信息。</string>
</resources>