<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iyuba.core.common.activity.RegisterNewActivity">
    <RelativeLayout
        android:id="@+id/relativeLayout_title_and_back"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/titlebar_lightgray_bg">

        <Button
            android:id="@+id/button_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/lib_back_button" />

        <TextView
            android:id="@+id/play_title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:shadowColor="#ff000000"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:shadowRadius="3.0"
            android:text="@string/regist_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/relativeLayout_title_and_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bkg"
            android:paddingLeft="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/usernameicon" />

            <EditText
                android:id="@+id/editText_userId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/regist_user_id_hint"
                android:singleLine="true"
                android:textColor="#000000"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edittext_bkg"
            android:paddingLeft="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/pwdicon" />

            <EditText
                android:id="@+id/editText_userPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/regist_user_pwd_hint"
                android:password="true"
                android:singleLine="true"
                android:textColor="#000000"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edittext_bkg"
            android:paddingLeft="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/repwdicon" />

            <EditText
                android:id="@+id/editText_reUserPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/regist_user_repwd_hint"
                android:password="true"
                android:singleLine="true"
                android:textColor="#000000"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edittext_bkg"
            android:paddingLeft="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/emailicon" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/regist_email_hint"
                android:singleLine="true"
                android:textColor="#000000"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edittext_bkg"
            android:paddingLeft="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/emailicon" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="手机号用于找回密码"
                android:singleLine="true"
                android:textColor="#000000"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_regist"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="@drawable/emailreg"
            android:text="@string/login_regist"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/rl_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox"
                android:checked="false" />

            <TextView
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/check_box"
                android:drawablePadding="5dp"
                android:layout_centerVertical="true"
                tools:text="隐私政策保护协议，必须同意" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/regist_web"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="left"
                android:minHeight="30dp"
                android:text="@string/regist_phone_web"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/regist_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="right"
                android:minHeight="30dp"
                android:text="@string/regist_phone_toemail"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
